# audio_splitter

./: README.md  pyproject.toml  requirements.txt
src/: main.py
src/splitter/: __init__.py  audio_splitter.py  file_manager.py
src/utils/: __init__.py  cleaner.py  helpers.py  logger.py
